tests/snapshots/ui_snapshot_tests__multiple_desks.snap
---
source: tests/ui_snapshot_tests.rs
expression: out
---
"┌──────────────────────┐┌──────────────────────────────────────────────────────────────────────────┐"
"│        🏢 Test       ││  Terminal 1     Terminal 2     ＋                                     ·  │" Hidden by multi-width symbols: [(10, " "), (58, " ")]
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"┌ Desks ───────────────┐┌ Terminal 1 ──────────────────────────────────────────────────────────────┐"
"│ ▶ Code               ││                                                                          │"
"│   Design Lab         ││                                                                          │"
"│   Infra              ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"  Focus:Sidebar    ↑↓  Navigate   o  Office   n  New Desk   x  Close   r  Rename   s  Settings   Esc"
