tests/snapshots/ui_snapshot_tests__rename_popup_visible.snap
---
source: tests/ui_snapshot_tests.rs
expression: out
---
"┌──────────────────────┐┌──────────────────────────────────────────────────────────────────────────┐"
"│        🏢 Test       ││  Terminal 1     ＋                                                    ·  │" Hidden by multi-width symbols: [(10, " "), (43, " ")]
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"┌ Desks ───────────────┐┌ Terminal 1 ──────────────────────────────────────────────────────────────┐"
"│ ▶ OldName            ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││     ┌ Rename Tab ──────────────────────────┐                             │"
"│                      ││     │  Terminal 1█                         │                             │"
"│                      ││     └──────────────────────────────────────┘                             │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"  Focus:Sidebar    Enter  Confirm   Esc  Cancel                                                     "
