tests/snapshots/ui_snapshot_tests__second_desk_selected.snap
---
source: tests/ui_snapshot_tests.rs
expression: out
---
"┌──────────────────────┐┌──────────────────────────────────────────────────────────────────────────┐"
"│        🏢 Test       ││  Terminal 1     ＋                                                    ·  │" Hidden by multi-width symbols: [(10, " "), (43, " ")]
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"┌ Desks ───────────────┐┌ Terminal 1 ──────────────────────────────────────────────────────────────┐"
"│   Active             ││                                                                          │"
"│ ▶ Other              ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"  Focus:Content    Esc·Esc  Jump   keys→shell                                                       "
