tests/snapshots/ui_snapshot_tests__single_desk_single_tab.snap
---
source: tests/ui_snapshot_tests.rs
expression: out
---
"┌──────────────────────┐┌──────────────────────────────────────────────────────────────────────────┐"
"│        🏢 Test       ││  Terminal 1     ＋                                                    ·  │" Hidden by multi-width symbols: [(10, " "), (43, " ")]
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"┌ Desks ───────────────┐┌ Terminal 1 ──────────────────────────────────────────────────────────────┐"
"│ ▶ Code               ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││      Theme disabled: terminal lacks truecolor (set COLORTERM=truecolor)   "
"└──────────────────────┘└ ─────────────────────────────────────────────────────────────────────────┘"
"  Focus:Content    Esc·Esc  Jump   keys→shell                                                       "
