tests/snapshots/ui_snapshot_tests__topbar_many_tabs.snap
---
source: tests/ui_snapshot_tests.rs
expression: out
---
"┌──────────────────────┐┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"│        🏢 Test       │┃  Alpha     Beta     Gamma     Delta     Epsilon     Zeta     Eta     ＋  ┃" Hidden by multi-width symbols: [(10, " "), (96, " ")]
"└──────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
"┌ Desks ───────────────┐┌ Alpha ───────────────────────────────────────────────────────────────────┐"
"│ ▶ Work               ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"  Focus:Topbar    ←→  Switch Tab   n  New Tab   x  Close Tab   r  Rename   Enter  Focus   Esc  Jump "
